<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>indi.mofan</groupId>
        <artifactId>springboot-study</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>spel</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>spel</name>
    <description>Spring Expression Language Study</description>
    <properties>
        <java.version>21</java.version>
    </properties>
</project>
